tests/ui/error-codes/E0208.stderr
error: ['a: +, T: o]
  --> $DIR/E0208.rs:4:1
   |
LL | struct Foo<'a, T> {
   | ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

